comic.css
#image-container {
  text-align: center;
}
.nav-button {
  display: inline-block;
}
#top-button-row {
  width: 100%; /* not needed?? */
  padding-top: 40px;
  padding-bottom: 40px;
}
#bottom-button-row {
  width: 100%; /* not needed?? */
  padding-top: 40px;
  padding-bottom: 40px;
}
.previous {
  position: absolute;
  left: 40px;
}
.next {
  position: absolute;
  right: 40px;
}
.round-button {
  width: 1.25em;
}
.round-button-circle {
  width: 100%;
  height:0;
  padding-bottom: 100%;
  border-radius: 50%;
  border:1px solid gray;
  overflow:hidden;
}
.button-spacer-left {
  padding-left: .3em;
}
.button-spacer-right {
  padding-left: .35em;
}
#shown-panel {
  max-width: 700px;
  width: 100%;
}
#message {
  width: 70%;
  display: block;
  padding-left: 15%;
  max-width: 400px;
}

